adding basics header&jumbotron still debug

--- a/index.html
+++ b/index.html
@@ -8,6 +8,33 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div id="wrapper">
+        <!-- Header, 100%w, logo,nav,access & Jumbotron -->
+        <header class="clearfix">
+            <div class="head-logo">LOGO</div>
+            <div class="head-nav">
+                <ul class="head-nav-ul">
+                    <li><a href="">firstEntry</a></li>
+                    <li><a href="">firstEntry</a></li>
+                    <li><a href="">firstEntry</a></li>
+                    <li><a href="">firstEntry</a></li>
+                    <li><a href="">firstEntry</a></li>
+                </ul>
+            </div>
+            <div class="head-login">
+                <a href="">LogIn</a>
+            </div>
+            <div class="head-jumbo">
+                <h1>HUMBLE JUMBO</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <button>Press Here</button>
+                <button>Not Here</button>
+            </div>
+        </header>
+        <main>
+
+        </main>
+        <footer></footer>
+    </div>
 </body>
 </html>
