Adding more element, testing svg&asides

--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
             </div>
         </header>
         <main>
+            <section class="clearfix" id="section-1">
+                <object class="section-svg" id="svg-1" data="img/item1.svg" width="300px" > </object>
+                <aside class="section-aside">
+                    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                </aside>
+            </section>
 
         </main>
         <footer></footer>
