Mid-Point Commit, added basic layout of most sections, to add final details and styles

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <button>Not Here</button>
             </div>
         </header>
-        <main>
+        <main class="clearfix">
             <section class="clearfix" id="section-1">
                 <object class="section-svg" id="svg-1" data="img/item1.svg" width="300px" > </object>
                 <aside class="section-aside">
@@ -39,9 +39,63 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
                 </aside>
             </section>
+            <section class="clearfix" id="section-2">
+                <object class="section-svg" id="svg-2" data="img/item2.svg" width="300px" > </object>
+                <aside class="section-aside">
+                    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                </aside>
+            </section>
+
 
         </main>
-        <footer></footer>
+        <!-- Footer -->
+        <footer class="">
+            <div class="foot-social">
+                <h4>Text Here</h4>
+            </div>
+            <div class="foot-list">
+                <ul>
+                    <li><em>Text</em></li>
+                    <li>text</li>
+                    <li>text</li>
+                    <li>text</li>
+                    <li>text</li>
+                </ul>
+            </div>
+            <div class="foot-list">
+                <ul>
+                    <li><em>Text</em></li>
+                    <li>text</li>
+                    <li>text</li>
+                    <li>text</li>
+                    <li>text</li>
+                </ul>
+            </div>
+            <div class="foot-list">
+                <ul>
+                    <li><em>Text</em></li>
+                    <li>text</li>
+                    <li>text</li>
+                    <li>text</li>
+                    <li>text</li>
+                </ul>
+            </div>
+            <div class="foot-list">
+                <ul>
+                    <li><em>Text</em></li>
+                    <li>text</li>
+                    <li>text</li>
+                    <li>text</li>
+                    <li>text</li>
+                </ul>
+            </div>
+            <!-- Footer Bottom Logo -->
+            <div class="foot-end">
+                <div class="logo">LOGO</div>
+                <div class="foot-login"></div>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
