Semi-final commit, missing fontawesome, wave svg and other

--- a/index.html
+++ b/index.html
@@ -47,16 +47,52 @@
             <section class="clearfix" id="section-1">
                 <object class="section-svg" id="svg-1" data="img/item1.svg" width="300px" > </object>
                 <aside class="section-aside">
-                    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                    <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                    <p> 
+                        I server Discord sono organizzati in canali tematici
+                        in cui puoi collaborare, condividere o semplicemente 
+                        parlare della tua giornata senza intasare una chat di gruppo.
+                    </p>
                 </aside>
             </section>
             <section class="clearfix" id="section-2">
                 <object class="section-svg" id="svg-2" data="img/item2.svg" width="300px" > </object>
                 <aside class="section-aside">
-                    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                    <h2>Dove trovarsi é facile</h2>
+                    <p>
+                        Mettiti comodo in un canale vocale quando hai tempo.
+                        Gli amici nel tuo server possono vedere che se lì e
+                        unirsi istantaneamente senza dover chiamare.
+                    </p>
                 </aside>
+            </section>
+            <section class="clearfix" id="section-3">
+                <object class="section-svg" id="svg-3" data="img/item3.svg" width="300px" > </object>
+                <aside class="section-aside">
+                    <h2>Da pochi ad un fandom</h2>
+                    <p>
+                        Dai inizio ad una community di qualsiasi dimensione
+                        con strumenti per moderazione e accesso ai membri personalizzabile.
+                        Concedi ai membri poteri speciali, crea canali privati e molto altro.
+                    </p>
+                </aside>
+            </section>
+            <!-- Final section -->
+            <section class="clearfix" id="section-4-big">
+                <aside class="section-aside">
+                    <h2>Tecnologia affidabile per tenersi in contatto</h2>
+                    <p>
+                        Video ed audio a bassa latenza ti faranno sentire come se
+                        foste tutti nella stessa stanza. Fai ciao in video, guarda
+                        gli amici giocare in streaming o riunitevi in una sessione
+                        di disegno con la condivisione schermo.
+                    </p>
+                </aside>
+                <object class="section-svg" id="svg-4-big" data="img/item4-big.svg" width="300px" > </object>
+            </section>
+            <section class="clearfix" id="section-call">
+                <h2>Pronto ad iniziare la tua avventura?</h2>
+                <button class="btn btn-call">Scarica per Mac</button>
             </section>
 
 
@@ -64,48 +100,59 @@
         <!-- Footer, simple but still a mess.. how?? -->
         <footer class="">
             <div class="foot-social">
-                <h4>Text Here</h4>
+                <h2 class="foot-title">Il tuo posto per parlare</h2>
+                <div>Italiano</div>
+                <div>icon icon icon icon</div>
             </div>
             <div class="foot-list">
                 <ul>
-                    <li><em>Text</em></li>
-                    <li>text</li>
-                    <li>text</li>
-                    <li>text</li>
-                    <li>text</li>
+                    <li class="foot-title">Prodotto</li>
+                    <li>Scarica</li>
+                    <li>Perché Discord</li>
+                    <li>Nitro</li>
+                    <li>Sicurezza</li>
+                    <li>Assistenza</li>
                 </ul>
             </div>
             <div class="foot-list">
                 <ul>
-                    <li><em>Text</em></li>
-                    <li>text</li>
-                    <li>text</li>
-                    <li>text</li>
-                    <li>text</li>
+                    <li class="foot-title">Compagnia</li>
+                    <li>Chi siamo</li>
+                    <li>Lavora con noi</li>
+                    <li>Marchio</li>
+                    <li>Redazione</li>
+                    <li>Negozio</li>
                 </ul>
             </div>
             <div class="foot-list">
                 <ul>
-                    <li><em>Text</em></li>
-                    <li>text</li>
-                    <li>text</li>
-                    <li>text</li>
-                    <li>text</li>
+                    <li class="foot-title">Prodotto</li>
+                    <li>Scarica</li>
+                    <li>Perché Discord</li>
+                    <li>Nitro</li>
+                    <li>Sicurezza</li>
+                    <li>Assistenza</li>
+                    <li>Scarica</li>
+                    <li>Perché Discord</li>
+                    <li>Nitro</li>
+                    <li>Sicurezza</li>
+                    <li>Assistenza</li>
                 </ul>
             </div>
             <div class="foot-list">
                 <ul>
-                    <li><em>Text</em></li>
-                    <li>text</li>
-                    <li>text</li>
-                    <li>text</li>
-                    <li>text</li>
+                    <li class="foot-title">Prodotto</li>
+                    <li>Scarica</li>
+                    <li>Perché Discord</li>
+                    <li>Nitro</li>
+                    <li>Sicurezza</li>
+                    <li>Assistenza</li>
                 </ul>
             </div>
             <!-- Footer Bottom Logo -->
             <div class="foot-end">
                 <object class="foot-logo" data="img/logo.svg" width="100px" > </object>
-                <div class="foot-login"><a href="">login</a></div>
+                <div class="foot-login btn"><a href="">login</a></div>
             </div>
         </footer>
     </div>
